    equals() and toString(). (Mark Spadoni via cutting)

    AVRO-1489. Java: Avro fails to build with OpenJDK 8. (Ricardo Arguello via
    tomwhite)

    AVRO-1302. Python: Update documentation to open files as binary to
    prevent EOL substitution. (Lars Francke via cutting)

    AVRO-1598. Java: Fix flakiness in TestFileSpanStorage.
    (Ryan Blue via cutting)

Avro 1.7.7 (23 July 2014)

  NEW FEATURES

    AVRO-1315. Java: Schema Validation utilities. (scottcarey and tomwhite)

    AVRO-1439. Java: Add AvroMultipleInputs for mapred. (Harsh J via cutting)

    AVRO-974. Add a Perl implementation of Avro. (Yann Kerhervé & John Karp)

    AVRO-1471. Java: Permit writing generated code in different
    character encodings. (Eugene Mustaphin via cutting)

    AVRO-1402. Add optional subtypes to specification, initially
    including a subtype of bytes and fixed for decimal values.
    (tomwhite & Ryan Blue via cutting)

    AVRO-1522. Java: Add support for compression codecs to SortedKeyValueFile.
    (Steven Willis via cutting)

    AVRO-1474. C++ resolvind decoder doesn't work when reader schema
    has more fields than writer schema. (thiru with help from Ramana
    Suvarapu)

    AVRO-1352. Schema for fixed types corrupted when writing out in
    JSON format (Steve Roehrs via thiru)

    AVRO-1533. Java: In schema resolution, permit conversion between
    bytes and string. (cutting)

  OPTIMIZATIONS

    AVRO-1455. Deep copy does not need to create new instances for primitives.
    (tomwhite)

  IMPROVEMENTS

    AVRO-1441. Java: Improve documentation for Maven configuration.
    (Jesse Anderson via cutting)

    AVRO-1447. Java: Remove dead code from example in documentation.
    (Jesse Anderson via cutting)

    AVRO-1449. Java: Optionally validate default values while reading schemas.
    (cutting)

    AVRO-1472. Java: Clarify parse method in getting started guide.
    (Michael Knapp via cutting)
