@@ -61,6 +61,9 @@ Trunk (not yet released)
     AVRO-1598. Java: Fix flakiness in TestFileSpanStorage.
     (Ryan Blue via cutting)
 
+    AVRO-1592. Java: Fix handling of Java reserved words as enum
+    constants in generated code. (Lukas Steiblys via cutting)
+
 Avro 1.7.7 (23 July 2014)
 
   NEW FEATURES
